--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,160 @@
+* {
+    font-family: 'Abel', sans-serif;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    background-image: url(./bg2.jpg);
+    background-size: cover;
+} 
+.my-app {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    width: 100vw;
+    min-height: 100vh;
+}
+.category-container {
+    min-width: 100px;
+    min-height: 100vh;
+    background-color: rgba(136, 149, 215, 0.734);
+    display: flex;
+    flex-direction: column;
+}
+.category-form  {
+    display: flex;
+    width: 100%;
+}
+.category-form input, .category-form button {
+    box-sizing: border-box;
+    height: 40px;
+    vertical-align: middle;
+}
+.category-form input {
+    width: 70%;
+    border: none;
+    padding-left: 10px;
+    font-size: 1rem;
+    outline: none;
+    color: #000;
+    background: rgba(210, 216, 246, 0.9);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.category-form input::placeholder {
+    color: #383838;
+}
+.category-form button {
+    font-size: 1rem;
+    width: 30%;
+    background: blue;
+    color: white;
+    border: none;
+}
+.category-form button:hover {
+    color: white;
+    background: rgb(0, 0, 127);
+    cursor: pointer;
+} 
+.category-item {
+    padding: 15px;
+    font-size: 1.2rem;
+    color: #000;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.category-item:hover {
+    color: white;
+    background: rgba(77, 106, 255, 0.9);
+}
+
+.category-item button {
+    width: 20%;
+    height: 30px;
+    background: rgb(75, 75, 255);
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+.category-item button:hover {
+    background: rgb(41, 41, 137);
+}
+
+
+.todo-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.todo-container h1 {
+    color:rgba(154, 170, 246, 0.9);
+}
+
+.todos-form input {
+    width: 250px;
+    border: none;
+    padding-left: 10px;
+    font-size: 1rem;
+    outline: none;
+    color: #000;
+    background: rgba(255, 255, 255, 0.9);
+}
+
+.todos-form input, .todos-form button {
+    box-sizing: border-box;
+    height: 40px;
+    vertical-align: middle;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.todos-form button {
+    font-size: 1rem;
+    background: blue;
+    color: white;
+    border: none;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    text-align: center;
+}
+.todos-form button:hover {
+    color: white;
+    background: rgb(0, 0, 127);
+    cursor: pointer;
+} 
+.category-item span i {
+    margin-right: 10px;
+    font-size: 0.8rem;
+}
+.todo-container h1 i {
+    margin-right: 10px;
+}
+.todo-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 150px;
+    margin: 10px;
+    background-color: rgba(136, 149, 215, 0.734);
+    border-radius: 5px;
+    padding: 5px 15px 5px 15px;
+}
+
+.todo-item span {
+    color: white;
+    font-size: 1.3rem;
+    margin: 5px;
+}
+
+.todo-item button {
+    width: 20%;
+    height: 30px;
+    background: rgb(75, 75, 255);
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.todo-item button:hover {
+    background: rgb(41, 41, 137);
 }
